# Conways-Game-of-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: grid.rs  main.rs
